Made left part of home section and solved the collapsed home section

--- a/Frontend/Style/_home.scss
+++ b/Frontend/Style/_home.scss
@@ -1,6 +1,30 @@
-#home{
-    height:1000px;
-    button{
-        @extend %transparent-button;
+#home {
+  margin-top: 5rem;
+  background-color: none;
+  .container {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    padding: 3rem 5rem;
+    h1 span {
+      color: var(--primary-text);
+      font-size: 3.5rem;
     }
+    h4 span {
+      color: var(--primary-base-color);
+      font-size: 2.5rem;
+      font-family: var(--tertiary-font);
+    }
+    button {
+      @extend %button;
+      i {
+        color: var(--secondary-text);
+      }
+      &:hover i{
+        color: var(--tertiary-text);
+      }
+    }
+  }
 }
+
