--- a/Frontend/Style/main.scss
+++ b/Frontend/Style/main.scss
@@ -1,8 +1,6 @@
 @import "nav";
 @import "home";
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Quicksand:wght@300..700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Protest+Revolution&family=Quicksand:wght@300..700&display=swap");
 
 * {
   margin: 0;
@@ -21,31 +19,34 @@
   --secondary-background: #1a1a1a;
   --primary-text: #eaeaea;
   --secondary-text: #b3b3b3;
-  --primary-base-color: #f2613f;
-  --secondary-base-color: #fc512a;
+  --tertiary-text: #001772;
+  --secondary-base-color: #34a5f5;
+  --primary-base-color: #00e5ff;
   --primary-font: "Josefin Sans", sans-serif;
   --secondary-font: "Montserrat Alternates", serif;
+  --tertiary-font: "Protest Revolution", sans-serif;
 }
-
+#networkCanvas {
+  position: fixed;
+  width: 1920px; /* Fixed Width */
+  height: 1080px; /* Fixed Height */
+  z-index: -1; /* Make sure it's behind all content */
+  pointer-events: none; /* Prevent interaction with canvas */
+  display: block;
+  margin-top: 100px;
+}
 html {
   scroll-behavior: smooth;
   body {
     font-size: 100%;
-    background: linear-gradient(135deg, #000000, #2c2c2c, #312c2c);
+    background: linear-gradient(135deg, #000000, #0e0d1c, #2d2c31);
     font-family: var(--primary-font);
-    #networkCanvas {
-      position: fixed;
-      width: 1920px; /* Fixed Width */
-      height: 1080px; /* Fixed Height */
-      z-index: -1; /* Make sure it's behind all content */
-      pointer-events: none; /* Prevent interaction with canvas */
-      display: block;
-      margin-top: 70px; /* Adjust to make space for navbar */
-    }
+
     h1 {
       font-size: 3rem;
       font-weight: 900;
-      color: var(--primary-text);
+      color: var(--secondary-base-color);
+      line-height: 4rem;
     }
 
     h2 {
@@ -85,25 +86,61 @@ html {
   font-size: 1.025rem;
   letter-spacing: 0.05rem;
   padding: 0.7rem 1.3rem;
-  border-radius: 0;
-  box-shadow: 0px 2px 10px -1px rgba(255, 255, 255, 0.308);
-  -webkit-transition: all 0.4s ease-out 0s;
-  -o-transition: all 0.4s ease-out 0s;
-  -moz-transition: all 0.4s ease-out 0s;
-  transition: all 0.4s ease-out 0s;
-}
+  text-transform: uppercase;
+  color: cyan;
+  background: transparent;
+  border: none;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  cursor: pointer;
+  transition: all 0.4s ease-out;
+  
+  /* Top-left and Bottom-right Borders */
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    width: 85px; /* Adjust length */
+    height: 35px;
+    border: 3px solid var(--primary-base-color); /* Border color */
+    border-image: linear-gradient(45deg, var(--primary-base-color), var(--tertiary-text)) 1;
+  }
 
-%transparent-button {
-  background: none;
-  color: var(--secondary-base-color);
-  border: 2px solid var(--secondary-base-color);
-  @extend %button;
+  /* Top-left corner */
+  &::before {
+    top: 0;
+    left: 0;
+    border-right: none;
+    border-bottom: none;
+  }
+
+  /* Bottom-right corner */
+  &::after {
+    bottom: 0;
+    right: 0;
+    border-left: none;
+    border-top: none;
+  }
+
   &:hover {
-    color: var(--primary-text);
-    background: none;
-    background-color: var(--secondary-base-color);
+    color: black;
+    background: var(--primary-base-color);
+    border-radius:0;
+    box-shadow: inset 0 0 10px 3px rgba(0, 229, 255, 0.6), inset 0 0 15px 6px rgba(122, 0, 255, 0.5);
+    transition: all 0.5s ease-in-out; 
+  }
+
+  &:hover::before,
+  &:hover::after {
+    border: none; 
+    
   }
 }
+
+
 // Custom Scrollbar
 ::-webkit-scrollbar {
   width: 0.625rem;
